# MLOOP

./: .editorconfig  .gitignore  BASELINE_PLAN.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_REVIEW.md  CODE_REVIEW_IMPROVEMENT_PLAN.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  ruff.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  hardware_report.yml
.github/workflows/: ci.yml  release.yml
config/: mloop.example.toml  mpv.conf
docs/: audio.md  configuration.md  development.md  display.md  hardware-compatibility.md  hdmi-gestures.md  index.md  installation.md  media.md  troubleshooting.md
packaging/: install.sh
packaging/debian/: README.md
packaging/image/: README.md  build-pi-image.sh
packaging/systemd/: mloop.service
scripts/: collect-debug-info.sh  dev-run.sh  simulate-hdmi-events.py  validate-player.sh
src/mloop/: __init__.py  __main__.py  config.py  daemon.py  logging.py  media.py  state.py
src/mloop/audio/: __init__.py  devices.py
src/mloop/display/: __init__.py  drm.py  hdmi_watcher.py  rotation.py
src/mloop/gestures/: __init__.py  events.py  state_machine.py
tests/integration/: test_daemon_hdmi.py  test_hdmi_watcher_fake_sysfs.py  test_mpv_ipc.py
tests/unit/: test_audio_devices.py  test_config.py  test_daemon_async.py  test_daemon_menu.py  test_daemon_player_recovery.py  test_entrypoint.py  test_gesture_state_machine.py  test_media.py  test_menu.py  test_platform.py  test_player_backends.py  test_player_factory.py
(+14 files in other folders)
